--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ def
     restAssuredVersion = "5.3.0",
     allureVersion = "2.21.0",
     junitVersion = "5.9.3",
-//    ownerVersion = "1.0.12",
+    ownerVersion = "1.0.12",
     slf4jVersion = "2.0.7"
 
 allure {
@@ -38,7 +38,7 @@ dependencies {
             "commons-io:commons-io:2.11.0",
             "io.rest-assured:rest-assured:$restAssuredVersion",
             "io.qameta.allure:allure-rest-assured:$allureVersion",
-//            "org.aeonbits.owner:owner:$ownerVersion",
+            "org.aeonbits.owner:owner:$ownerVersion",
             "org.slf4j:slf4j-simple:$slf4jVersion"
     )
 }
@@ -56,5 +56,16 @@ tasks.withType(Test) {
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
+    }
+}
+
+task android_test(type: Test) {
+    useJUnitPlatform{
+        includeTags("android")
+    }
+}
+task ios_test(type: Test) {
+    useJUnitPlatform{
+        includeTags("ios")
     }
 }
